# torchdock

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
example/flex_docking/: 4fkv_ligand.smi  README.md
example/remi_docking/: 1mq6_ligand.smi  README.md
torchdock/: __init__.py
torchdock/cli/: __init__.py  convert_result.py  define_box.py  prepare_ligand.py  prepare_receptor.py  rmsd_vs_reference.py
torchdock/config/: __init__.py  config.py  default_config.yaml
torchdock/constants/: __init__.py  atom14_constants.py  vina_constants.py  vinardo_constants.py
torchdock/data/: __init__.py  base_dataloader.py  pdbqtParser.py  vina_dataloader.py
torchdock/metrics/: __init__.py  rmsd.py
torchdock/model/: __init__.py  conformer_transformer.py  vina_scoring.py
torchdock/pipeline/: __init__.py  conformation_search.py  docking_runner.py  initializer.py  postprocessor.py  score_predictor.py
torchdock/pretrain_xgboost/: __init__.py  xgboost_model.pkl
torchdock/utils/: __init__.py  logging.py
